# RGInterp

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  pyproject.toml  setup.py
RGInterp/: Axis.h  Grid.h  InterpolationStrategy.h  Interpolator.h  RGIThreads.h
python/rgi_interp_python/: main.cpp  py_axis.cpp  py_grid.cpp  py_interp_3d.cpp
tests/: CMakeLists.txt  main.cpp  test_axis.cpp  test_interpolator.cpp  test_scipy.py
