[build-system]
requires = [
    "setuptools>=42",
    "scikit-build",
    "cmake>=3.14",
    "ninja",
    "pybind11"
]
build-backend = "setuptools.build_meta"

[project]
name = "rgi_interp_python"
version = "0.0.1"
authors = [
    {name="Tom McLean", email="mcleantom97@gmail.com"}
]
description = "Accelerated regular grid interpolation."
readme = "README.md"
requires-python = ">=3"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "numpy",
    "scipy",
    "pytest"
]

